--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "db_connect":"node ./configs/mongoose.js",
+    "db_connect": "node ./configs/mongoose.js",
     "test": "jest"
   },
   "repository": {
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "method-override": "^3.0.0",
     "mongoose": "^7.1.1",
     "nodemon": "^2.0.22"
   }
