--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "Hash URL into 5 characters of alphanumaric",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "db_connect": "node ./configs/mongoose.js",
+    "db_connect": "node ./plugins/randomID.js",
     "test": "jest"
   },
   "repository": {
@@ -25,6 +26,7 @@
     "express-handlebars": "^7.0.7",
     "method-override": "^3.0.0",
     "mongoose": "^7.1.1",
+    "nanoid": "^4.0.2",
     "nodemon": "^2.0.22"
   }
 }
